[gd_scene load_steps=6 format=3 uid="uid://nh5l5iekhjdl"]

[ext_resource type="Script" uid="uid://ci5psmvraa1l" path="res://Lista1/Exercicio2/Exercicio2.gd" id="1_im7g0"]

[sub_resource type="LabelSettings" id="LabelSettings_07jpv"]
font_size = 38

[sub_resource type="LabelSettings" id="LabelSettings_im7g0"]
font_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4usec"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 5.0
bg_color = Color(0.194349, 0.194349, 0.194349, 1)

[sub_resource type="LabelSettings" id="LabelSettings_e0lnp"]
font_size = 18

[node name="Exercicio2" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
script = ExtResource("1_im7g0")

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Center"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Titulo" type="Label" parent="Center/VBox"]
layout_mode = 2
text = "Calculadora
Juros Simples"
label_settings = SubResource("LabelSettings_07jpv")
horizontal_alignment = 1

[node name="Campos" type="GridContainer" parent="Center/VBox"]
layout_mode = 2
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 2

[node name="CapitalInicial" type="Label" parent="Center/VBox/Campos"]
layout_mode = 2
text = "Capital Inicial"
label_settings = SubResource("LabelSettings_im7g0")

[node name="CapitalEntrada" type="LineEdit" parent="Center/VBox/Campos"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
placeholder_text = "em R$"

[node name="TaxaDeJurosLabel" type="Label" parent="Center/VBox/Campos"]
layout_mode = 2
text = "Taxa de Juros "
label_settings = SubResource("LabelSettings_im7g0")
horizontal_alignment = 1

[node name="TaxaDeJurosEntrada" type="LineEdit" parent="Center/VBox/Campos"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
placeholder_text = "(em porcentagem)"

[node name="TempoLabel" type="Label" parent="Center/VBox/Campos"]
layout_mode = 2
text = "Tempo"
label_settings = SubResource("LabelSettings_im7g0")

[node name="TempoEntrada" type="LineEdit" parent="Center/VBox/Campos"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
placeholder_text = "(em porcentagem)"

[node name="Calcular" type="Button" parent="Center/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Calcular
"

[node name="Resultado" type="Label" parent="Center/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_4usec")
label_settings = SubResource("LabelSettings_e0lnp")
vertical_alignment = 1

[connection signal="pressed" from="Center/VBox/Calcular" to="." method="_on_calcular_pressed"]
